--- a/wercker-step.yml
+++ b/wercker-step.yml
@@ -1,6 +1,6 @@
-name: npm-install
-version: 1.1.4
-description: npm-install step
+name: npm-install-cwd
+version: 0.0.1
+description: npm-install step with current directory support
 properties:
   clear-cache-on-failed:
     type: bool
@@ -13,3 +13,7 @@ properties:
   options:
     type: string
     required: false
+  cwd:
+    type: string
+    required: false
+    default: ./
